idldoc/src/resources/main.css
/* setup page */
body { font-family: Helvetica, sans-serif; font-size: 10pt; margin: 0; padding: 0; }
div.content { padding: 1em; }

/* link styles */
a { text-decoration: none; }
a:link, a:visited { color: #0000FF; }
a:hover, a:focus { background: yellow; border-bottom: 1px dotted #303099; }

/* titles */
h1, h2, h3, h4 { font-weight:normal; color: #900000; margin-top: 1.5em; }
.center { margin-left: auto; margin-right: auto; }
.small { font-size: 90%; }
.smaller { font-family: Verdana, Helvetica, sans-serif; font-size: 80%; }
.smallest { font-family: Verdana, Helvetica, sans-serif; font-size: 70%; }
h1.basename { margin-top: 0; }
h2.directory { font-size: 90%; margin-bottom: 0; }

div.routine-details { border: 1px dotted #C0C0C0; margin-top: 1em; padding: 1em; }
div.routine-details h3 { margin-top: 0; }
a.top { font-weight: bold; text-transform: uppercase; float: right; }

/* code styles */
code { font-family: "Courier New", Courier, monospace; }
code.listing { white-space: pre; display: block; padding: 0.5em 3em 0.5em 3em; }
.syntax { margin-left: 1.5em; text-indent: -1.5em; }

dl.routine-summary dt { margin-bottom: 0.25em; }
dl.routine-summary dd { margin-bottom: 0.5em; margin-left: 2em; }

/* table */
table { empty-cells: show; }

/* An attribute table is a vertical list of name-value pairs. */
table.attribute { 
  background: #EFEFEF; 
  padding: 0.75em; 
  border: 1px #A0A0A0 dotted; 
}
table.attribute td { font-style: italic; }
table.attribute td.name { font-style: normal; padding-right: 1.5em; }

/* header/navbar styles */
div.header { padding: 2em 2em 0 2em; background: #71900B; border-bottom: 2px #384806 solid; }
div.header h1 { color: white; margin:0; font-weight: normal; }
div.header h2 { color: white; margin-top: 0; margin-bottom 1em; font-weight: normal; font-style: italic; font-size: 100%; }
table.navbar { background: #B0E020; margin: 0; padding: 0; border-bottom: 1px #384806 dotted; width: 100%; }
table.navbar td { padding: 4px 0.5em 3px 0.5em; }
table.navbar td.flexible { width: 100%; text-align: right; padding-right: 1em; }
table.navbar td.selected { background: #384806; }
table.navbar td.selected, table.navbar td.selected a { color: white; }
table.navbar a:hover, table.navbar a:focus { background: inherit; border-bottom: 1px solid #303099; }
p.localnavbar { text-align: right; margin: 0.2em 1em 0.2em 0.2em; padding: 0; }

/* footer styles */
div.footer { padding: 0.5em 1em 0.5em 1em; background: #EFEFEF; border-top: 1px #A0A0A0 dotted; }
div.footer table { width: 100%; }
div.footer td.right { text-align: right; }

